tester/tests/compile-pass/method-call-literal.srv


fn methodtest(s: String) -> Int
    "hello".length()
end
