tester/tests/compile-fail/function-def-call-bad-args.srv
fn func1(i: Int) -> Int
    i
end

fn func2(s: String) -> Int
    func1(s)
end
